--- a/PoGo.Necrobot.Window/packages.config
+++ b/PoGo.Necrobot.Window/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetBrowser" version="1.9" targetFramework="net462" />
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net462" />
   <package id="Fody" version="1.29.4" targetFramework="net462" developmentDependency="true" />
   <package id="Geocoding.net" version="3.6.0" targetFramework="net462" />
